[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-vylen-gateway"
version = "0.1.0"
description = "Vylen Cloud gateway adapter for hermes-agent."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Vylen" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]
dependencies = [
    "websockets>=12,<14",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "build>=1",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/GiorgioRegni/hermes-vylen-gateway"
Repository = "https://github.com/GiorgioRegni/hermes-vylen-gateway"
Issues = "https://github.com/GiorgioRegni/hermes-vylen-gateway/issues"

# Hermes discovers gateway/platform plugins via this entry-point group. When
# the user does `pip install hermes-vylen-gateway` alongside hermes-agent and
# then runs `hermes gateway`, the loader imports our module and calls
# register(ctx). See hermes_cli/plugins.py ENTRY_POINTS_GROUP.
[project.entry-points."hermes_agent.plugins"]
# Hermes's plugin loader does ep.load() then getattr(module, "register"),
# so the entry-point must point to the module (not the function itself).
vylen = "hermes_vylen_gateway"

[project.scripts]
hermes-vylen-gateway = "hermes_vylen_gateway.init_cli:main"
vylen-gateway-doctor = "hermes_vylen_gateway.doctor:main"
vylen-gateway-pair = "hermes_vylen_gateway.pair:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
